--- a/web/app.html
+++ b/web/app.html
@@ -10,7 +10,7 @@
     />
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-RD2DLZXLVN"
+      src="https://www.googletagmanager.com/gtag/js?id=G-FTRTR1MR3V"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -18,7 +18,8 @@
         dataLayer.push(arguments);
       }
       gtag("js", new Date());
-      gtag("config", "G-RD2DLZXLVN");
+
+      gtag("config", "G-FTRTR1MR3V");
     </script>
   </head>
   <body {{ BODY_ATTRS }}>
